# cppcon-2021-corobatch

./: .gitignore  CMakeLists.txt  Corobatch.pptx  README.md  benchmark_result.txt
benchmark/: CMakeLists.txt  benchmark.cpp  common.cpp  common.h  comparison.cpp  comparison.h
presentation/: README.md
src/: corobatch.cpp  corobatch.h  corobatch2.cpp  corobatch2.h  corobatch_opt.cpp  corobatch_opt.h  test.cpp  test_opt.cpp
